# otus_hw_01

./: .travis.yml  CMakeLists.txt  README.md  config.h.in  general_api.cpp  general_api.h  main.cpp  test_g_general_api.cpp
tests/: test_g_general_api.cpp  test_general_api.cpp
